# github_actions_demo_project

./: .gitignore  CMakeLists.txt  LICENSE
.github/scripts/: prepare_oneapi_apt.sh  test.sh
.github/workflows/: ci.yml
include/: impl.h
src/: impl.cpp  main.cpp
test/: CMakeLists.txt  test.cpp
